--- a/TheHourglass.RestaurantRepository/TheHourglass.RestaurantRepository.csproj
+++ b/TheHourglass.RestaurantRepository/TheHourglass.RestaurantRepository.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.4" />
+    <PackageReference Include="Yelp.Api" Version="1.2.5" />
   </ItemGroup>
 
 </Project>
