--- a/TheHourglassApp/TheHourglassApp.csproj
+++ b/TheHourglassApp/TheHourglassApp.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
+    <PackageReference Include="Yelp.Api" Version="1.2.5" />
   </ItemGroup>
 
   <ItemGroup>
