--- a/TheHourglassApp/TheHourglassApp.csproj
+++ b/TheHourglassApp/TheHourglassApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\lib\bootstrap\dist\css\desktop.ini" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
   </ItemGroup>
